--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 title:            Greenfield Innovation
-description:      Responsive full-stack development that puts experience first.
+description:      Full-stack development that puts experience first.
 logo:             site-logo.png
 disqus_shortname:
 search:           false   #TODO: change when enough content & search bugs fixed.
 # Change url to your domain. Leave localhost server or blank when working locally.
 # You don't need to specify the protocol if you want it available on http and https. Example: //localhost:4000
-url:              http://localhost:4000
+url:              //greenfieldinnovation.com
 
 # Owner/author information
 owner:
