jekyll-generated css, script

--- a/_config.yml
+++ b/_config.yml
@@ -97,7 +97,7 @@ exclude: [
   "README.md", "LICENSE",
   "config", "log", "lib", 
   "test", 
-#  "less", 
+  "less", 
  # 'css',
 #  'sass',
 #  'js',
