--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,7 @@ disqus_shortname:
 search:           false   #TODO: change when enough content & search bugs fixed.
 # Change url to your domain. Leave localhost server or blank when working locally.
 # You don't need to specify the protocol if you want it available on http and https. Example: //localhost:4000
+#url:              //localhost:4000  #local dev
 url:              //greenfieldinnovation.com
 
 # Owner/author information
