--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,7 @@ url:              //greenfieldinnovation.com
 
 #TEST:  1. Add trivial edit (comment) to yml, to test whether it will trigger a site rebuild on github
 #TEST:  2. Add trivial edit (comment) to yml, to test whether it will trigger a site rebuild on github
+#TEST:  3. Add trivial edit (comment) to yml, to test whether it will trigger a site rebuild on github
 
 # Owner/author information
 owner:
