--- a/_config.yml
+++ b/_config.yml
@@ -8,10 +8,8 @@ search:           false   #TODO: change when enough content & search bugs fixed.
 # url:              //localhost:4000  #local dev
 url:              //greenfieldinnovation.com
 
-#TEST:  1. Add trivial edit (comment) to yml, to test whether it will trigger a site rebuild on github
-#TEST:  2. Add trivial edit (comment) to yml, to test whether it will trigger a site rebuild on github
-#TEST:  3. Add trivial edit (comment) to yml, to test whether it will trigger a site rebuild on github
-
+#WORKAROUND:  Add trivial edit (comment) to yml, to test whether it will trigger a site rebuild on github
+#             1,2,3,4,5
 # Owner/author information
 owner:
   name:           Monte Hayward
