--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,9 @@ search:           false   #TODO: change when enough content & search bugs fixed.
 url:              //greenfieldinnovation.com
 
 #WORKAROUND:  Add trivial edit (comment) to yml, to test whether it will trigger a site rebuild on github
-#             1,2,3,4,5
+#             Tue Jun 24 20:05:18 CDT 2014
+
+
 # Owner/author information
 owner:
   name:           Monte Hayward
