--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,17 @@ description:      Full-stack development that puts experience first.
 logo:             site-logo.png
 disqus_shortname:
 search:           false   #TODO: change when enough content & search bugs fixed.
+
 # Change url to your domain. Leave localhost server or blank when working locally.
 # You don't need to specify the protocol if you want it available on http and https. Example: //localhost:4000
-# url:              //localhost:4000  #local dev
-url:              //greenfieldinnovation.com
+# Serving
+#url:              //greenfieldinnovation.com
+url:             //greenfield.local:4900  #local dev
+# detach:  false
+port:    4900
+#host:    0.0.0.0
+#baseurl: "" # does not include hostname
+
 
 #WORKAROUND:  Add trivial edit (comment) to yml, to test whether it will trigger a site rebuild on github
 #             Tue Jun 24 20:09:11 CDT 2014
@@ -62,14 +69,10 @@ links:
   - title: About
     url:  /about/
   - title: Contact
-    url:  /contact/
-# - title: Articles
-#   url: /articles/
-#  - title: Theme Setup
-#    url: /theme-setup/
-#  - title: Made Mistakes
-#    url: http://mademistakes.com
-#    external: true
+    url: /contact/
+  - title: Blog
+    url: /articles/
+
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 timezone:    America/Chicago
