--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "so-simple-theme",
-  "author": "Michael Rose <michael@mademistakes.com>",
-  "homepage": "http://mmistakes.github.io/so-simple-theme/",
+  "name": "greenfield-innovation",
+  "author": "Monte Hayward",
+  "homepage": "http://greenfield-innovation.github.io/",
   "repository": {
     "type": "git",
-    "url": "git://github.com/mmistakes/so-simple-theme.git"
+    "url": "https://github.com/greenfield-innovation/greenfield-innovation.github.io.git"
   },
   "bugs": {
-    "url": "https://github.com/mmistakes/so-simple-theme/issues"
+    "url": "https://github.com/greenfield-innovation/greenfield-innovation.github.io/issues"
   },
   "engines": {
     "node": ">= 0.10.0"
