update social media liniks

--- a/_config.yml
+++ b/_config.yml
@@ -30,10 +30,10 @@ owner:
   #TODO: avatar:         bio-photo.jpg
   email:          monte@montehayward.com
   # Social networking links used in footer. Update and remove as you like.
-  angelco:  greenfield-innovation
-  twitter:
-  facebook:
-  github:
+  angelco:  gig-greenfield-innovation-group
+  twitter:  monte_hayward
+  facebook: greenfieldinnovation
+  github:   
   stackexchange:
   linkedin:         monte
   instagram:
