--- a/_config.yml
+++ b/_config.yml
@@ -7,11 +7,11 @@ search:           false   #TODO: change when enough content & search bugs fixed.
 # Change url to your domain. Leave localhost server or blank when working locally.
 # You don't need to specify the protocol if you want it available on http and https. Example: //localhost:4000
 # Serving
-url:              ""
-#url:              //greenfieldinnovation.com
+#url:              ""
+url:              //greenfieldinnovation.com
 #url:             //greenfield.local:4900  #local dev
 # detach:  false
-# port:    4900
+port:    4900
 #host:    0.0.0.0
 #baseurl: "" # does not include hostname
 
@@ -75,6 +75,8 @@ links:
     url:  /about/
   - title: Contact
     url: /contact/
+  - title: ""
+    url: /examples/
 #  - title: Blog
 #    url: /blog/
 
