--- a/_config-dev.yml
+++ b/_config-dev.yml
@@ -1,15 +1,15 @@
-title:            gig&#58; Greenfield Innovation Group
+title:            gig&#58; Dev Local
 description:      Full-stack development that puts experience first.
 logo:             site-logo.png
 disqus_shortname:
-search:           false   #TODO: change when enough content & search bugs fixed.
+search:           false
 
 # Change url to your domain. Leave localhost server or blank when working locally.
 # You don't need to specify the protocol if you want it available on http and https. Example: //localhost:4000
-# Serving PRODUCTION
-url:              //greenfieldinnovation.com
+# Serving
+url:             //greenfield.local:4900  #local dev
 # detach:  false
-# port:    4900
+port:    4900
 #host:    0.0.0.0
 #baseurl: "" # does not include hostname
 
