Styling changes to accommodate varied content

--- a/_config-dev.yml
+++ b/_config-dev.yml
@@ -83,7 +83,7 @@ markdown:    kramdown
 
 # https://github.com/mojombo/jekyll/wiki/Permalinks
 permalink:   /:categories/:title/
-relative_permalinks: true
+relative_permalinks: false
 
 kramdown:
   auto_ids: true
