--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title:            gig&#58; Greenfield Innovation Group
 description:      Full-stack development that puts experience first.
 logo:             site-logo.png
 disqus_shortname:
-search:           false   #TODO: change when enough content & search bugs fixed.
+search:           false
 
 # Change url to your domain. Leave localhost server or blank when working locally.
 # You don't need to specify the protocol if you want it available on http and https. Example: //localhost:4000
@@ -83,7 +83,7 @@ markdown:    kramdown
 
 # https://github.com/mojombo/jekyll/wiki/Permalinks
 permalink:   /:categories/:title/
-relative_permalinks: true
+relative_permalinks: false
 
 kramdown:
   auto_ids: true
