--- a/_config.yml
+++ b/_config.yml
@@ -80,6 +80,7 @@ timezone:    America/Chicago
 future:      true
 highlighter: pygments
 markdown:    kramdown
+encoding:    utf-8
 
 # https://github.com/mojombo/jekyll/wiki/Permalinks
 permalink:   /:categories/:title/
