--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-htmlmin": "^0.4",
     "grunt-contrib-imagemin": "~0.2.0",
     "grunt-contrib-jshint": "~0.6.3",
     "grunt-contrib-uglify": "~0.2.2",
     "grunt-contrib-watch": "~0.5.2",
     "grunt-imageoptim": "^1.4.1",
-    "grunt-inline": "^0.3.1",
+    "grunt-inline": "^0.3.3",
     "grunt-recess": "~0.3.5",
+    "grunt-shell": "^1.1.2",
     "grunt-svgmin": "~0.2.0",
     "grunt-uncss": "^0.3.4"
   }
