--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,7 @@ bower_components
 .grunt          # temporary clone location
 .sass-cache
 .tmp/** 	# intermediate build steps
-_site/**	#contains Jekyll-generated static site files
+# _site/**	#contains Jekyll-generated static site files
 debug
 build
 npm-debug.log
