cleanup and propagate images

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ node_modules
 bower_components
 .grunt          # temporary clone location
 .sass-cache
+.tmp         # intermediate build steps
 .tmp/**         # intermediate build steps
 # _site/**      #contains Jekyll-generated static site files
 debug
@@ -31,3 +32,4 @@ npm-debug.log
 Gemfile.lock
 env/*
 !env/sample.sh
+sitemap.xml
