--- a/_config-dev.yml
+++ b/_config-dev.yml
@@ -7,7 +7,7 @@ search:           false
 # Change url to your domain. Leave localhost server or blank when working locally.
 # You don't need to specify the protocol if you want it available on http and https. Example: //localhost:4000
 
-url:             //greenfieldinnovation.com # !!! use only in permalinks !!!
+url:             http://greenfieldinnovation.com # !!! use only in permalinks !!!
 # detach:  false
 port:    4900
 #host:    0.0.0.0
@@ -27,7 +27,7 @@ owner:
   angelco:  gig-greenfield-innovation-group
   twitter:  monte_hayward
   facebook: greenfieldinnovation
-  github:   
+  github:
   stackexchange:
   linkedin:         monte
   instagram:
@@ -55,7 +55,7 @@ bing_verify:
       # image:
       #   background: summer_field_1920x1170_progressive.jpg
       #   credit: Wallpaperstock.net
-      #   creditlink: 
+      #   creditlink:
 
 
 # Links to include in top navigation
@@ -71,6 +71,7 @@ links:
     url: /contact/
   - title: ""
     url: /examples/
+    sitemap: false
 #  - title: Blog
 #    url: /blog/
 
@@ -106,9 +107,9 @@ exclude: [
   "config.rb", "Rakefile", "Rakefile.rb", "tmp", "Gemfile", "Capfile", "Gemfile.lock",
   "Gruntfile.js", "package.json", "node_modules",
   "README.md", "LICENSE",
-  "config", "log", "lib", 
-  "test", 
-  "less", 
+  "config", "log", "lib",
+  "test",
+  "less",
  # 'css',
 #  'sass',
 #  'js',
