--- a/_config-dev.yml
+++ b/_config-dev.yml
@@ -3,6 +3,8 @@ description:      Full-stack development that puts experience first.
 logo:             site-logo.png
 disqus_shortname:
 search:           false
+feed:             false
+tags:             false
 
 # Change url to your domain. Leave localhost server or blank when working locally.
 # You don't need to specify the protocol if you want it available on http and https. Example: //localhost:4000
